crates/franken-engine/tests/snapshots/golden_lowering__for_of_destructuring.snap
---
source: crates/franken-engine/tests/golden_lowering.rs
expression: actual
---
# franken-engine lowering IR3 golden
# Update with:
#   INSTA_UPDATE=always cargo test -p frankenengine-engine --test golden_lowering
# Then review with `cargo insta review` and commit tests/snapshots/.
case: for_of_destructuring
goal: Script
source:
  for (const [first] of pairs) { first; }

constant_pool:
  [0000] "0"

instructions:
  0000: {"Move":{"dst":2,"src":1}}
  0001: {"ForOfInit":{"src":2,"dst":3}}
  0002: {"ForOfNext":{"iterator":3,"value_dst":4,"done_target":14}}
  0003: {"Move":{"dst":5,"src":4}}
  0004: {"Move":{"dst":0,"src":5}}
  0005: {"Move":{"dst":6,"src":5}}
  0006: {"LoadStr":{"dst":7,"pool_index":0}}
  0007: {"GetProperty":{"obj":6,"key":7,"dst":8}}
  0008: {"Move":{"dst":9,"src":8}}
  0009: {"Move":{"dst":0,"src":9}}
  0010: {"Move":{"dst":10,"src":9}}
  0011: {"Move":{"dst":0,"src":10}}
  0012: {"Jump":{"target":2}}
  0013: {"IteratorClose":{"iterator":3,"reason":"Break"}}
  0014: {"Return":{"value":0}}
  0015: "Halt"
