crates/franken-engine/tests/snapshots/golden_lowering__nullish_coalescing.snap
---
source: crates/franken-engine/tests/golden_lowering.rs
expression: actual
---
# franken-engine lowering IR3 golden
# Update with:
#   INSTA_UPDATE=always cargo test -p frankenengine-engine --test golden_lowering
# Then review with `cargo insta review` and commit tests/snapshots/.
case: nullish_coalescing
goal: Script
source:
  null ?? 42;

constant_pool:
  <empty>

instructions:
  0000: {"LoadNull":{"dst":1}}
  0001: {"Move":{"dst":2,"src":1}}
  0002: {"Move":{"dst":0,"src":2}}
  0003: {"Move":{"dst":3,"src":2}}
  0004: {"JumpIfNullish":{"cond":3,"target":6}}
  0005: {"Jump":{"target":9}}
  0006: {"LoadInt":{"dst":4,"value":42}}
  0007: {"Move":{"dst":2,"src":4}}
  0008: {"Move":{"dst":0,"src":2}}
  0009: {"Move":{"dst":5,"src":2}}
  0010: {"Move":{"dst":0,"src":5}}
  0011: {"Return":{"value":0}}
  0012: "Halt"
